Closed
Bug 1350330
Opened 9 years ago
Closed 9 years ago
Crash in mozalloc_abort | NS_DebugBreak | mozilla::ipc::LogicError | mozilla::layers::PLayerTransactionChild::SendReleaseCompositable
Categories
(Core :: Graphics, defect, P3)
Tracking
()
RESOLVED
FIXED
mozilla55
| Tracking | Status | |
|---|---|---|
| firefox52 | --- | unaffected |
| firefox-esr52 | --- | unaffected |
| firefox53 | --- | wontfix |
| firefox54 | --- | fixed |
| firefox55 | --- | fixed |
People
(Reporter: marcia, Assigned: vliu)
Details
(Keywords: crash, Whiteboard: [gfx-noted])
Crash Data
Attachments
(1 file)
|
778 bytes,
patch
|
dvander
:
review+
gchang
:
approval-mozilla-aurora+
|
Details | Diff | Splinter Review |
This bug was filed from the Socorro interface and is
report bp-f89de6d5-9b25-48f2-9bbd-01c192170321.
=============================================================
Seen while looking at Nightly crash stats. These crashes started with 20170320030209: http://bit.ly/2nLOn3u
Possible regression range based on Build ID: https://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=e1576dd8bd9d3a4ca418cf347133b8a4957ddeca&tochange=1b9293be51637f841275541d8991314ca56561a5
Comment 1•9 years ago
|
||
This line appears to be some kind of state change. Nical, is it possible the forwarder is already being destroyed here or something along those lines?
CC'ing Milan, listed as critical.
Flags: needinfo?(nical.bugzilla)
Priority: -- → P3
Updated•9 years ago
|
Whiteboard: [gfx-noted]
| Assignee | ||
Comment 2•9 years ago
|
||
Hi David,
Do you think we can have this IPC check and see if it can fix this crash?
Attachment #8857317 -
Flags: review?(dvander)
Comment on attachment 8857317 [details] [diff] [review]
0001-Bug-1350330-Make-sure-IPC-channel-still-Open-before-.patch
Review of attachment 8857317 [details] [diff] [review]:
-----------------------------------------------------------------
Yup, good catch.
Attachment #8857317 -
Flags: review?(dvander) → review+
| Assignee | ||
Updated•9 years ago
|
Assignee: nobody → vliu
| Assignee | ||
Comment 4•9 years ago
|
||
Pushed by vliu@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/1574c02ea13f
Make sure IPC channel still Open before sending IPC message. r=dvander
Comment 6•9 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla55
Comment 7•9 years ago
|
||
Looks like the code in question goes back to 53, but this only started crashing in 55? Do we need to consider this for backport to 54 or can it ride the 55 train?
status-firefox52:
--- → unaffected
status-firefox53:
--- → wontfix
status-firefox54:
--- → affected
status-firefox-esr52:
--- → unaffected
Flags: needinfo?(nical.bugzilla) → needinfo?(vliu)
| Assignee | ||
Comment 8•9 years ago
|
||
(In reply to Ryan VanderMeulen [:RyanVM] from comment #7)
> Looks like the code in question goes back to 53, but this only started
> crashing in 55? Do we need to consider this for backport to 54 or can it
> ride the 55 train?
Yes, I think we can backport to 54. It is no risky to have this uplift.
Flags: needinfo?(vliu)
| Assignee | ||
Comment 9•9 years ago
|
||
Comment on attachment 8857317 [details] [diff] [review]
0001-Bug-1350330-Make-sure-IPC-channel-still-Open-before-.patch
Approval Request Comment
[Feature/Bug causing the regression]: bug 1323957
[User impact if declined]: Crash might happens
[Is this code covered by automated tests?]: no
[Has the fix been verified in Nightly?]:
[Needs manual test from QE? If yes, steps to reproduce]: no
[List of other uplifts needed for the feature/fix]:
[Is the change risky?]: no
[Why is the change risky/not risky?]:Gecko has some other check like patch did.
[String changes made/needed]:
Attachment #8857317 -
Flags: approval-mozilla-aurora?
Comment 10•9 years ago
|
||
Comment on attachment 8857317 [details] [diff] [review]
0001-Bug-1350330-Make-sure-IPC-channel-still-Open-before-.patch
Fix a potential crash. Aurora54+.
Attachment #8857317 -
Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Comment 11•9 years ago
|
||
You need to log in
before you can comment on or make changes to this bug.
Description
•