Bug 1350330 - Make sure IPC channel still Open before sending IPC message. r=dvander. a=gchang

--HG--
extra : source : 1574c02ea13ff124565754192b19950480ce917e